# IntelliScrape

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: example.py  test_cleaner.py  test_extractor.py  test_parser.py  test_scrape.py  test_utils.py
intelliscrape/: __init__.py  browser.py  cleaner.py  cli.py  core.py  downloader.py  exceptions.py  extractor.py  link_checker.py  parser.py  utils.py
tests/: test_browser.py  test_downloader.py  test_scrape.py
