[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "intelliscrape"
version = "1.0.0"
description = "Smart Python web scraping library with automatic static and dynamic website detection"
readme = "README.md"
license = {text = "MIT"}

authors = [
  {name = "GuixJoy"}
]

requires-python = ">=3.9"

dependencies = [
    "requests",
    "beautifulsoup4",
    "playwright"
]


keywords = [
    "web scraping",
    "python scraper",
    "playwright",
    "beautifulsoup",
    "data extraction"
]


classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]